Swarm now correctly adjusts as members are removed
Swarm now correctly adjusts as members are removed

--- a/blaster2.html
+++ b/blaster2.html
@@ -169,9 +169,9 @@ init = function()
 		
 		prefabs.CreatePlayer(37,39,38,90);
 
-		prefabs.CreateSpawner(-GAME_WIDTH/2,0,200,"SwarmA", 80);
-		prefabs.CreateSpawner(GAME_WIDTH/2,0,40,"EnemyB", 50);
-		prefabs.CreateSpawner(-GAME_WIDTH/2,0,40, "EnemyA", 50);
+		prefabs.CreateSpawner(-GAME_WIDTH/2,0,200,"SwarmA", 3);
+//		prefabs.CreateSpawner(GAME_WIDTH/2,0,40,"EnemyB", 50);
+//		prefabs.CreateSpawner(-GAME_WIDTH/2,0,40, "EnemyA", 50);
 		
 		prefabs.CreateRadarHud();
 		
@@ -415,7 +415,7 @@ CompSpawner = function(xpos,ypos,spawnRate, prefabType, spawnMax)
 CompEnemyTeamLeader = function(xpos,ypos)
 {	
 	return {"Name" : "EnemyTeamLeader",
-		"TeamMembers" : QuickCollection(),
+		"TeamMembers" : ClassicCollection(),
 		"YPosAngleOffset" : 0
 		};
 }
@@ -777,7 +777,7 @@ SysEnemies = function()
 		{
 			var spawner = e.components.Spawner;
 			spawner.ElapsedTime++;
-			if ( prefabs.Count(spawner.SpawnPrefabType) <= spawner.SpawnMax)
+			if ( prefabs.Count(spawner.SpawnPrefabType) < spawner.SpawnMax)
 			{
 				if ( spawner.ElapsedTime > spawner.SpawnRate)
 				{
@@ -801,57 +801,67 @@ SysEnemies = function()
 		
 		if ( e.components.EnemyTeamLeader)
 		{
-			if ( e.components.EnemyTeamLeader.TeamMembers.length == 0)
-			{
-				e.components.Collide.Destroy = true;
-			}
-			
 			e.components.Position.Position.y += Math.cos(e.components.EnemyTeamLeader.YPosAngleOffset)*4;
 			e.components.EnemyTeamLeader.YPosAngleOffset += Math.PI/50;
 			// Set the world positions of the members
 			// relate to our position
-			var memberDied = false;
+			var memberDied = null;
+			var teamMembersCount = 0;
 			for ( var mIdx = e.components.EnemyTeamLeader.TeamMembers.length - 1; mIdx >= 0; mIdx--)
 			{
-				var m = e.components.EnemyTeamLeader.TeamMembers.data[mIdx];
-				if ( m.components.Collide.Destroy )
+				if ( e.components.EnemyTeamLeader.TeamMembers.data[mIdx] != null)
 				{
-					e.components.EnemyTeamLeader.TeamMembers.Delete(mIdx);
-					memberDied = true;
-					if ( e.components.EnemyTeamLeader.TeamMembers.length == 0 )
+					var m = e.components.EnemyTeamLeader.TeamMembers.data[mIdx];
+					if ( m.components.Collide.Destroy )
 					{
-						prefabs.CreatePowerUp(m.components.Position.Position.x,m.components.Position.Position.y,0,0);
+						memberDied = e.components.EnemyTeamLeader.TeamMembers.data[mIdx];
+						e.components.EnemyTeamLeader.TeamMembers.Delete(mIdx);
 					}
+					else
+					{
+						teamMembersCount++
+						if ( m.components.EnemyTeamMember.Position.x < m.components.EnemyTeamMember.DesiredPosition.x)
+							m.components.EnemyTeamMember.Position.x++;
+						else
+							m.components.EnemyTeamMember.Position.x--;
+						if ( m.components.EnemyTeamMember.Position.y < m.components.EnemyTeamMember.DesiredPosition.y)
+							m.components.EnemyTeamMember.Position.y++;
+						else
+							m.components.EnemyTeamMember.Position.y--;	
+						m.components.Position.Position.x = m.components.EnemyTeamMember.Position.x + e.components.Position.Position.x;
+						m.components.Position.Position.y = m.components.EnemyTeamMember.Position.y + e.components.Position.Position.y;
+					}
+				}	
+			}
+			if ( memberDied )
+			{
+				if ( teamMembersCount == 0 )
+				{
+					prefabs.CreatePowerUp(memberDied.components.Position.Position.x,memberDied.components.Position.Position.y,0,0);
+					e.components.Collide.Destroy = true;
 				}
 				else
 				{
-					if ( m.components.EnemyTeamMember.Position.x < m.components.EnemyTeamMember.DesiredPosition.x)
-						m.components.EnemyTeamMember.Position.x++;
-					else
-						m.components.EnemyTeamMember.Position.x--;
-					if ( m.components.EnemyTeamMember.Position.y < m.components.EnemyTeamMember.DesiredPosition.y)
-						m.components.EnemyTeamMember.Position.y++;
-					else
-						m.components.EnemyTeamMember.Position.y--;	
-					m.components.Position.Position.x = m.components.EnemyTeamMember.Position.x + e.components.Position.Position.x;
-					m.components.Position.Position.y = m.components.EnemyTeamMember.Position.y + e.components.Position.Position.y;
+					// At least 1 team member died so recalculate desired positions
+					var swarmSize = teamMembersCount;
+					var memberPos = teamMembersCount-1;
+					var velocityDirection = 1;
+					if ( e.components.Physics.Velocity.x < 0)
+						velocityDirection = -1;
+					
+					for ( var mIdx = e.components.EnemyTeamLeader.TeamMembers.length - 1; mIdx >= 0; mIdx--)
+					{
+						var m = e.components.EnemyTeamLeader.TeamMembers.data[mIdx];
+						if ( m != null )
+						{
+							m.components.EnemyTeamMember.DesiredPosition.y = (memberPos - (Math.floor(swarmSize / 2))) * 30;
+							m.components.EnemyTeamMember.DesiredPosition.x = -Math.abs(memberPos - (Math.floor(swarmSize / 2))) * 30 * velocityDirection;
+							memberPos--;
+						}
+					}
 				}
-			}
-			if ( memberDied && e.components.EnemyTeamLeader.TeamMembers.length != 0)
-			{
-				// At least 1 team member died so recalculate desired positions
-				var swarmSize = e.components.EnemyTeamLeader.TeamMembers.length;
-				for ( var mIdx = e.components.EnemyTeamLeader.TeamMembers.length - 1; mIdx >= 0; mIdx--)
-				{
-					var m = e.components.EnemyTeamLeader.TeamMembers.data[mIdx];
-
-					m.components.EnemyTeamMember.DesiredPosition.y = (mIdx - (swarmSize / 2)) * 30;
-					m.components.EnemyTeamMember.DesiredPosition.x = Math.abs(mIdx - (swarmSize / 2)) * 30;
-				}
-
 			}
 		}
-		
 	}
 	
 	// find the player
@@ -1364,7 +1374,7 @@ function PrefabManager()
 		if ( type == "EnemyB")
 			return EnemyB.length;
 		if ( type == "SwarmA")
-			return SwarmAMember.length;
+			return SwarmALeader.length;
 	}
 	
 	obj.CreatePlayer = function (keyleft, keyright, keyaccelerate, keyshoot)
@@ -1613,7 +1623,7 @@ function PrefabManager()
 			velocityDirection = -1;
 		
 		ec = entity.components.Physics
-		ec.Velocity.x = 4 * velocityDirection;
+		ec.Velocity.x = 2 * velocityDirection;
 		ec.Velocity.y = 0;
 		ec.Acceleration = 1;
 		ec.Drag = 1;
@@ -1677,8 +1687,8 @@ function PrefabManager()
 ec.Position.x = 0;
 ec.Position.y = 0;
 //ec.Position.y = (e - (swarmSize / 2)) * 30;
-ec.DesiredPosition.x = Math.abs(e - (swarmSize / 2)) * 30;;
-ec.DesiredPosition.y = (e - (swarmSize / 2)) * 30;
+ec.DesiredPosition.x = -Math.abs(e - (Math.floor(swarmSize / 2))) * 30 * velocityDirection;
+ec.DesiredPosition.y = (e - (Math.floor(swarmSize / 2))) * 30;
 			
 			entity2.components.EnemyTeamMember.TeamLeader = entity;
 			
@@ -1929,6 +1939,42 @@ function QuickCollection()
 	
 	return obj;
 }
+
+// Classic collection will always just append,
+// a delete will make the entry a null
+// and reclaim never works.
+
+function ClassicCollection()
+{
+	var obj = {};
+	obj.length = 0;
+	obj.data = new Array();
+	
+	obj.Insert = function(item)
+	{
+		// if the item had been reclaimed then the item is already in the array
+		if ( obj.data[obj.length] != item )
+		{
+			obj.data[obj.length] = item;
+		}
+		obj.length++;
+	}
+	
+	// This function will return the first object in the list
+	// that is now "deleted".
+	obj.Reclaim = function()
+	{
+		return null;
+	}
+	
+	obj.Delete = function(pos)
+	{
+		obj.data[pos] = null;
+	}
+	
+	return obj;
+}
+
 
 // last piece of code is to start the game
 init();
